objects/borrower__c.object
<CustomObject>
    <description>this include registered member  of library</description>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <picklist>
            <picklistValues>
                <fullName>india</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>usa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>china</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>japan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>email_id__c</fullName>
        <label>email id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>father_name__c</fullName>
        <label>father name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <label>gender</label>
        <picklist>
            <picklistValues>
                <fullName>male</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mobile_no__c</fullName>
        <label>mobile no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>place__c</fullName>
        <label>place</label>
        <picklist>
            <controllingField>state__c</controllingField>
            <picklistValues>
                <fullName>patna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bhagalpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ranchi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jamsedpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bokaro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bhopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jabalpur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>register_no__c</fullName>
        <displayFormat>R-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>register no</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>registration_date__c</fullName>
        <label>registration date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>registration_valid_up_to__c</fullName>
        <formula>registration_date__c +365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>registration valid up to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <picklist>
            <controllingField>country__c</controllingField>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odisha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamil Nadu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telangana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tripura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uttar Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uttarakhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Bengal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>total_ticket_cost__c</fullName>
        <label>total ticket cost</label>
        <summarizedField>travel_booking__c.total_cost__c</summarizedField>
        <summaryForeignKey>travel_booking__c.bookedby__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>total_ticket_price__c</fullName>
        <label>total ticket price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>total_tickets__c</fullName>
        <label>total tickets</label>
        <summaryForeignKey>travel_booking__c.bookedby__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>registered member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>registered members</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>